# vizualiser

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-start.bat  docker-start.sh  test.txt
backend/: Dockerfile  models.db  requirements.txt  start.bat  start.sh
backend/app/: __init__.py  database.py  main.py
exporters/python/: README.md  pyproject.toml
exporters/python/nn3d_exporter/: __init__.py  onnx_exporter.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Scene.tsx  index.ts
frontend/src/components/controls/: CameraControls.tsx  Interaction.tsx  index.ts
frontend/src/components/edges/: EdgeConnections.tsx  EdgeGeometry.tsx
frontend/src/components/layers/: LayerGeometry.tsx  LayerNodes.tsx
frontend/src/components/ui/: DropZone.module.css  DropZone.tsx  InfoPanel.module.css  InfoPanel.tsx  Toolbar.module.css  Toolbar.tsx
frontend/src/components/visualization/: ArchScene.tsx  LayerDetailPanel.module.css  index.ts  (+7 more)
frontend/src/core/: api-client.ts  arch-layout.ts  index.ts  layer-geometry.ts  layout-engine.ts  layout.ts  layout.worker.ts  loader.ts  model-hierarchy.ts  store.ts
frontend/src/hooks/: useLayoutWorker.ts
frontend/src/schema/: index.ts  nn3d.schema.json  types.ts  validator.ts
samples/: transformer_encoder.nn3d
src/: App.tsx
src/components/edges/: NeuralConnection.tsx  index.ts
src/components/layers/: NeuralLayerMesh.tsx  index.ts
src/components/ui/: index.ts
src/components/visualization/: ArchScene.tsx  NeuralVisualizer.tsx  SavedModelsPanel.module.css  index.ts
src/core/: api-client.ts  arch-layout.ts
src/core/formats/: format-detector.ts  keras-parser.ts
(+6 files in other folders)
