[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn3d-exporter"
version = "1.0.0"
description = "Export neural network models to NN3D format for 3D visualization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NN3D Team"}
]
keywords = ["neural-network", "visualization", "deep-learning", "pytorch", "onnx", "3d"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = []

[project.optional-dependencies]
pytorch = ["torch>=1.9.0"]
onnx = ["onnx>=1.10.0"]
all = ["torch>=1.9.0", "onnx>=1.10.0"]
dev = ["pytest>=7.0.0", "black", "isort", "mypy"]

[project.urls]
Homepage = "https://github.com/nn3d/visualizer"
Documentation = "https://nn3d.dev/docs"
Repository = "https://github.com/nn3d/visualizer"

[project.scripts]
nn3d-export = "nn3d_exporter.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
